[package]
name = "ext2-rs"
version = "0.1.0"
authors = ["Li Qing <geding.lq@antgroup.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["libc"]
sgx = ["sgx_types", "sgx_tstd", "sgx_trts", "sgx_libc"]

[dependencies]
rcore-fs = { path = "../../deps/sefs/rcore-fs" }
pod = { git = "https://github.com/asterinas/pod", rev = "d7dba56" }
inherit-methods-macro = { git = "https://github.com/asterinas/inherit-methods-macro", rev = "98f7e3e" }
static_assertions = "1.1.0"
bitflags = "1.3"
spin = "0.9.8"
cfg-if = "1.0.0"
bitvec = { version = "1.0", default-features = false, features = ["alloc"] }
log = "0.4"
lru = "=0.12.3"
libc = { version = "0.2.147", optional = true }

sgx_types = { path = "../../deps/rust-sgx-sdk/sgx_types", optional = true }
sgx_tstd = { path = "../../deps/rust-sgx-sdk/sgx_tstd", features = ["backtrace"], optional = true }
sgx_trts = { path = "../../deps/rust-sgx-sdk/sgx_trts", optional = true }
sgx_libc = { path = "../../deps/rust-sgx-sdk/sgx_libc", optional = true }

[dev-dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[lib]
doctest = false
